--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.5.9",
+    "gql": "^1.1.2",
+    "graphql": "^16.3.0"
   }
 }
