--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.5.9",
+    "apollo-server-express": "^2.15.0",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
-    "graphql": "^15.5.0",
+    "gql": "^1.1.2",
+    "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10"
   },
